<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/item_layout_editText_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic"/>

    <TextView
        android:text="@string/item_layout_editText_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAccount"
        android:layout_below="@+id/textViewDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/item_layout_editText_total_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTotalSum"
        android:layout_below="@+id/textViewAccount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold|italic"/>

    <TextView
        android:text="@string/item_layout_editText_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewType"
        android:layout_below="@+id/textViewAccount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/item_layout_editText_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewType"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewDescription"/>
</RelativeLayout>
