<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabianmikaelsson.easymoney.View.NewEntryActivity">

    <TextView
        android:id="@+id/activityDescription"
        android:text="@string/new_entry_description_of_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/LinearLayoutRadioGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityDescription"
        android:layout_centerHorizontal="true">

        <RadioGroup
            android:id="@+id/InOrOutRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/IncomeRadioButton"
                android:text="@string/new_entry_income_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/ExpenseRadioButton"
                android:text="@string/new_entry_expense_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutDate"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutRadioGroup"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/new_entry_tw_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DateEditText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutDescription"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutDate"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/new_entry_desc_of_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <EditText
            android:id="@+id/DescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutTypeOfEntry"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutDescription"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/new_entry_tw_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TypeOfEntrySpinner"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutAccount"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutTypeOfEntry"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/new_entry_tw_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AccountSpinner"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutSum"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutAccount"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/new_entry_tw_total_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <EditText
            android:id="@+id/SumEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:text="@string/new_entry_btn_add_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/addEntrybutton1"/>

</RelativeLayout>
