<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabianmikaelsson.easymoney.View.AddAccountActivity">

    <LinearLayout
        android:id="@+id/AddAccountHeader"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/add_account_activity_textView_add_account_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AddAccountLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddAccountHeader"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/add_account_activity_textView_account_nr_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/AccountNrEditText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AddAccountLinearLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddAccountLinearLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/add_account_activity_textView_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NameAccountEditText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutRemoveAccount"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddAccountLinearLayout2"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/add_account_activity_textView_remove_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/removeAccountSpinner"/>
    </LinearLayout>

    <Button
        android:id="@+id/removeAccountButton"
        android:text="@string/add_account_activity_button_remove_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayoutRemoveAccount"/>

    <Button
        android:text="@string/add_account_activity_button_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/addNewAccountButton"/>
</RelativeLayout>
